--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/Romalus-Creator/se_project_express.git"
   },
-  "author": "",
+  "author": "Roman Ehrhardt",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Romalus-Creator/se_project_express/issues"
